# semenova_fossdev

./: .gitignore  Makefile  README.md  docker-compose.yaml  makefile  practiceMakefile  pyproject.toml  script.py  test.py
docs_domain/docs/: Makefile
docs_domain/docs/source/: Makefile  conf.py  index.rst
docs_domain/docs/source/_build/: .buildinfo  QUICKSTART.html  USAGE.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs_domain/src/: sales.py
file_exchanger/: Makefile  README.md  diagram.drawio  setup.py
file_exchanger/docs/: DOMAIN.md  factioons.drawio  sequentalDiagram.drawio
make-project/: .gitignore  README.md  makefile  requirements.txt
make-project/scripts/: check_requirements.py
make-project/src/: app.py  calc.py  service.py
makeutil/: another-app  app  main.c  makefile
order_service/: Dockerfile  Makefile  pyproject.toml  setup.py
order_service/docs/: DOMAIN.md
product_service/: Dockerfile  Makefile  pyproject.toml
product_service/src/: main.py
src/pyflowkit/: core.py
src/pyflowkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
testing/frameworks/: setup.py
testing/frameworks/src/tax/: income.py
testing/frameworks/tests/tax/: test_income.py  test_income_pytests.py  test_income_unittest.py
testing/principle/: setup.py
testing/principle/src/: math_demo.py
testing/principle/tests/: test_principles.py
testing/tdd/: makefile  setup.py
testing/tdd/src/: ndfl.py
testing/tdd/src/ndfl.egg-info/: SOURCES.txt
testing/tdd/tests/: test_bank_ndfl.py
tests/: test_core.py  test_pyflowkit.py
(+5 files in other folders)
