[project]
name = "product-service"
version = "0.1.0"
description = "product service"
authors = [
    {name = "alena"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
